--- a/app/views/prototypes/beta/list-staff-john-end.html
+++ b/app/views/prototypes/beta/list-staff-john-end.html
@@ -61,6 +61,9 @@
         John Adams
       </a>
     </h3>
+    <p>Male<br>
+    White</p>
+    
         </td>
         
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
@@ -76,6 +79,8 @@
         Julie Ann Angelo
       </a>
     </h3>
+    <p>Female<br>
+    White</p>
         </td>
         
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
@@ -92,6 +97,8 @@
           Sharon Bansal
         </a>
       </h3>
+      <p>Female<br>
+        Mixed / Multiple ethnic group</p>
           </td>
          
            <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
@@ -108,6 +115,8 @@
           Jonathan Bridger
         </a>
       </h3>
+      <p>Male<br>
+        Mixed / Multiple ethnic group</p>
           </td>
           
            <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
@@ -124,6 +133,8 @@
           Henry Decorcey
         </a>
       </h3>
+      <p>Male<br>
+        White</p>
           </td>
          
            <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
@@ -140,6 +151,8 @@
           John Dory
         </a>
       </h3>
+      <p>Male<br>
+        White</p>
           </td>
           
            <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
@@ -156,6 +169,8 @@
           Andrew McPherson
         </a>
       </h3>
+      <p>Male<br>
+        White</p>
           </td>
           
            <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
@@ -195,8 +210,7 @@
       </a>
     </h3>
 
-    <p>
-      
+    <p>  
     Male<br>
     Mixed / Multiple ethnic group<br>
     Teacher<BR>
@@ -240,7 +254,7 @@
         Frederick Epstein
       </a>
     </h3>
-    Prefer  not to say<br>
+    <p>Prefer  not to say<br>
     Black / African / Caribbean / Black British<br>
     Manager<br>
   Permanent</p>
@@ -260,6 +274,10 @@
         Joel Gowon
       </a>
     </h3>
+    <p>Male<br>
+      Black / African / Caribbean / Black British<br>
+      Manager<br>
+    Permanent</p>
         </td>
         
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
@@ -276,6 +294,10 @@
         Thomas Moore
       </a>
     </h3>
+    <p>Male<br>
+      White<br>
+      Manager<br>
+    Permanent</p>
         </td>
         
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
@@ -292,6 +314,10 @@
         Mia Tam
       </a>
     </h3>
+    <p>Female<br>
+      Black / African / Caribbean / Black British<br>
+      Teacher<br>
+    Permanent</p>
         </td>
        
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
@@ -308,6 +334,10 @@
         Vincent Jan Patlong
       </a>
     </h3>
+    <p>Prefer  not to say<br>
+      Other<br>
+      Administrator<br>
+    Part-time</p>
         </td>
         
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
