--- a/app/views/prototypes/beta/many-vacancies-filled.html
+++ b/app/views/prototypes/beta/many-vacancies-filled.html
@@ -33,7 +33,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How many manager vacancies were filled?
+        How many of these vacancies were filled?
       </h1>
     </legend><br>
 
