--- a/app/views/prototypes/beta/many-vacancies.html
+++ b/app/views/prototypes/beta/many-vacancies.html
@@ -33,13 +33,13 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How many manager vacancies did you have in the last academic year?
+        How many senior leadership or manager vacancies did you have in the last academic year?
       </h1>
     </legend><br><br>
     <div class="govuk-form-group">
       
       <label class="govuk-label" for="width-10">
-        Senior or middle managers, principals, vice-principals, CEOs
+        Principals, vice-principals, senior or middle managers, CEOs, directors
       </label>
       <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
     </div><br>
