--- a/app/views/prototypes/beta/role-main.html
+++ b/app/views/prototypes/beta/role-main.html
@@ -42,7 +42,13 @@
     
     <div class="govuk-radios">
       
-
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+          Senior leader
+        </label>
+        
+      </div>
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
