--- a/app/views/prototypes/beta/role.html
+++ b/app/views/prototypes/beta/role.html
@@ -48,12 +48,23 @@
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
             <label class="govuk-label govuk-checkboxes__label" for="waste">
-              Manager
+              Senior leader
             </label>
             <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
-              Senior or middle manager, principal, vice-principal, CEO
+              Principal, vice-principal, working director or CEO
             </div>
 
+          </div><br>
+
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
+            <label class="govuk-label govuk-checkboxes__label" for="waste-2">
+              Manager
+            </label>
+
+            <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+              Senior or middle manager
+            </div>
           </div><br>
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
