--- a/app/views/prototypes/beta/start-staff.html
+++ b/app/views/prototypes/beta/start-staff.html
@@ -60,7 +60,7 @@
             <tr class="govuk-table__row">
               
               <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="mis">Your staff</a>
-                <p class="govuk-body">Enter the individual details of full-time, part-time and temporary staff.</p> <p> Create a list that includes managers, teachers, teaching support and administration staff.</p>
+                <p class="govuk-body">Create a list of full-time, part-time and temporary staff. <p>Include managers, teachers, teaching support and administration staff.</p>
               </td>
               <td class="govuk-table__cell" scope="row">       </td>
               <td class="govuk-table__cell"></td>
