--- a/app/views/prototypes/beta/role-main.html
+++ b/app/views/prototypes/beta/role-main.html
@@ -89,7 +89,7 @@
 <br>
 
 
-          <a href="qualification-type" class="govuk-button show-continue" style="display: inline;">
+          <a href="leader" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
