--- a/app/views/prototypes/beta/role.html
+++ b/app/views/prototypes/beta/role.html
@@ -63,7 +63,7 @@
             </label>
 
             <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
-              Senior or middle manager
+              Middle management
             </div>
           </div><br>
           <div class="govuk-checkboxes__item">
