--- a/app/views/prototypes/beta/leader.html
+++ b/app/views/prototypes/beta/leader.html
@@ -37,7 +37,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Is John the person in charge of your organisation?
+        Is John your most senior leader?
       </h1>
     </legend>
   
@@ -71,7 +71,7 @@
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="radio-teach2" name="teach" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
           <label class="govuk-label govuk-radios__label" for="sign-in-2">
-            A member of the senior leadership team
+            No but a member of the senior leadership team
           </label>
           <!--<div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
             Apprenticeships, traineeships, T levels
@@ -81,15 +81,7 @@
         <br>
 
 
-        <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="radio-teach3" name="teach" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
-          <label class="govuk-label govuk-radios__label" for="sign-in-2">
-           No
-          </label>
-          <!--<div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
-            Basic English and Maths, ESOL, SEN or supported learning, Preparation for work and life skills, Community learning and Family
-          </div>-->
-        </div>
+        
 
         
       </div>
