--- a/app/views/prototypes/beta/leader.html
+++ b/app/views/prototypes/beta/leader.html
@@ -57,7 +57,7 @@
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="radio-teach1" name="teach" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="choose">
-          Head of your organisation or your FE provision
+          Yes - head of my organisation or FE provision
           </label>
           <!--<div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
             Head of your organisation or your FE provision
@@ -71,7 +71,7 @@
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="radio-teach2" name="teach" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
           <label class="govuk-label govuk-radios__label" for="sign-in-2">
-            No but a member of the senior leadership team
+            No - but a member of the senior leadership team
           </label>
           <!--<div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
             Apprenticeships, traineeships, T levels
