--- a/app/views/prototypes/beta/leader.html
+++ b/app/views/prototypes/beta/leader.html
@@ -55,7 +55,7 @@
       
       <div class="govuk-radios">
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="radio-teach1" name="teach" type="radio" value="#">
+          <input class="govuk-radios__input" id="radio-leader1" name="teach" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="choose">
           Yes - head of my organisation or FE provision
           </label>
@@ -69,7 +69,7 @@
 
 
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="radio-teach2" name="teach" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
+          <input class="govuk-radios__input" id="radio-leader2" name="teach" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
           <label class="govuk-label govuk-radios__label" for="sign-in-2">
             No - but a member of the senior leadership team
           </label>
