--- a/app/views/prototypes/beta/list-staff-john-end.html
+++ b/app/views/prototypes/beta/list-staff-john-end.html
@@ -188,7 +188,7 @@
   <tr class="govuk-table__row">
     
   <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
-    <a href="#" class="govuk-link govuk-link--no-visited-state">
+    <a href="complete-john-five" class="govuk-link govuk-link--no-visited-state">
       John Adams
     </a>
   </h3>
