--- a/app/views/prototypes/beta/complete-john-five.html
+++ b/app/views/prototypes/beta/complete-john-five.html
@@ -58,7 +58,7 @@
               <p>
                 18 August 1992<br>
               Male<br>
-            English</p>
+            British</p>
           </dt>
           
           <dd class="govuk-summary-list__actions">
