--- a/app/views/prototypes/beta/staff-zero.html
+++ b/app/views/prototypes/beta/staff-zero.html
@@ -53,72 +53,41 @@
 
 <h2 class="govuk-heading-m app-application-cards__heading">Incomplete staff members</h2>
 
-       <table class="govuk-table">
-
-      <thead class="govuk-table__head">
-      <tr class="govuk-table__row">
-    
-      <th class="govuk-table__header" scope="col"></th>
-
-      <th class="govuk-table__header" scope="col"></th>
-      <th class="govuk-table__header" scope="col"></th>
-    </tr>
-</thead>
+       
 
 
-
-<tbody class="govuk-table__body">
-  <tr class="govuk-table__row">
-
-    
-    
-    <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-m govuk-!-margin-bottom-1">
-      <a href="complete-john" class="govuk-link govuk-link--no-visited-state">
-        John Adams
-      </a>
-    </h3>
-        </td>
-    <td class="govuk-table__cell" scope="row"> </td>
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed"></strong></td>
-  </tr>
-  
-  
-
-
-</tbody>
-</table><br><br>
-
-<h2 class="govuk-heading-m app-application-cards__heading">Complete staff members</h2>
 
 <table class="govuk-table">
 
   <thead class="govuk-table__head">
   <tr class="govuk-table__row">
-
-  <th class="govuk-table__header" scope="col"></th>
-
-  <th class="govuk-table__header" scope="col"></th>
-  <th class="govuk-table__header" scope="col"></th>
+  
+  <th class="govuk-table__cell--numeric"></th>
 </tr>
 </thead>
 
 
 
 <tbody class="govuk-table__body">
+
+
+
 <tr class="govuk-table__row">
 
-
-
-<td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-m govuk-!-margin-bottom-1">
+<td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
   <a href="complete-john" class="govuk-link govuk-link--no-visited-state">
-    Julie Jones
+    John Adams
   </a>
 </h3>
+
     </td>
-<td class="govuk-table__cell" scope="row"> </td>
-<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed"></strong></td>
+    
+     <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+      Delete<span class="govuk-table__cell--numeric"></span>
+    </a></td></tr>
 </tr>
 
+<tr class="govuk-table__row">
 
 
 
