--- a/app/views/prototypes/beta/complete-john-five.html
+++ b/app/views/prototypes/beta/complete-john-five.html
@@ -56,9 +56,8 @@
                 Personal
               </a></h3>
               <p>
-                18 August 1992<br>
               Male<br>
-            British</p>
+            White</p>
           </dt>
           
           <dd class="govuk-summary-list__actions">
