--- a/app/views/prototypes/beta/list-staff-john-end.html
+++ b/app/views/prototypes/beta/list-staff-john-end.html
@@ -219,7 +219,7 @@
   Female<br>
   Mixed / Multiple ethnic group<br>
     Teacher<BR>
-  Part-time</p>
+      Fixed term or temporary</p>
       </td>
       
        <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
@@ -278,7 +278,7 @@
     <p>Male<br>
       White<br>
       Manager<br>
-    Permanent</p>
+      Fixed term or temporary</p>
         </td>
         
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
@@ -298,7 +298,7 @@
     <p>Female<br>
       Black / African / Caribbean / Black British<br>
       Teacher<br>
-    Permanent</p>
+      Fixed term or temporary</p>
         </td>
        
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
