--- a/app/views/prototypes/beta/leader.html
+++ b/app/views/prototypes/beta/leader.html
@@ -70,7 +70,7 @@
 
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="radio-leader2" name="teach" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
-          <label class="govuk-label govuk-radios__label" for="sign-in-2">
+          <label class="govuk-label govuk-radios__label" for="leader">
             No - but a member of the senior leadership team
           </label>
           <!--<div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
