--- a/app/views/prototypes/beta/complete-john.html
+++ b/app/views/prototypes/beta/complete-john.html
@@ -51,11 +51,9 @@
                   Personal
                 </a></h3>
                 <p>
-                  18 August 1992<br>
-               Male<br>
-                White<br>
-                No disability<BR>
-            English</p>
+                  Male<br>
+                White<br> 
+            British</p>
             </dt>
             
             <dd class="govuk-summary-list__actions">
