--- a/app/views/prototypes/beta/complete-john-four.html
+++ b/app/views/prototypes/beta/complete-john-four.html
@@ -53,8 +53,9 @@
                 Personal
               </a></h3>
               <p>
-              Male<br>
-              British</p>
+                Male<br>
+              White<br> 
+          British</p>
           </dt>
           
           <dd class="govuk-summary-list__actions">
