--- a/app/views/prototypes/beta/list-staff-john.html
+++ b/app/views/prototypes/beta/list-staff-john.html
@@ -45,39 +45,51 @@
 
         
       
-       <table class="govuk-table">
+<table class="govuk-table">
 
-      <thead class="govuk-table__head">
-      <tr class="govuk-table__row">
-    
-      <th class="govuk-table__header" scope="col"></th>
+<thead class="govuk-table__head">
+<tr class="govuk-table__row">
 
-      <th class="govuk-table__header" scope="col"></th>
-      <th class="govuk-table__header" scope="col"></th>
-    </tr>
+<th class="govuk-table__cell--numeric"></th>
+</tr>
 </thead>
 
 
 
 <tbody class="govuk-table__body">
-  <tr class="govuk-table__row">
+
+
+
+<tr class="govuk-table__row">
+
+<td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+<a href="complete-john" class="govuk-link govuk-link--no-visited-state">
+  John Adams
+</a>
+</h3>
+
+  </td>
+  
+   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+    Delete<span class="govuk-table__cell--numeric"></span>
+  </a></td></tr>
+</tr>
+
+<tr class="govuk-table__row">
+
+  <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+  <a href="complete-john" class="govuk-link govuk-link--no-visited-state">
+    Julie Anne Angelo
+  </a>
+  </h3>
+  
+    </td>
     
-    <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="complete-john">John Adams</a>
-        </td>
-    <td class="govuk-table__cell" scope="row"> </td>
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed"></strong></td>
+     <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+      Delete<span class="govuk-table__cell--numeric"></span>
+    </a></td></tr>
   </tr>
 
-  
-
-
-  <tr class="govuk-table__row">
-    
-    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Julie Anne Angelo</a></td>
-    <td class="govuk-table__cell" scope="row"> </td>
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed"></strong></td>
-  </tr>
-  
 
 
 </tbody>
@@ -89,36 +101,37 @@
 
   <thead class="govuk-table__head">
   <tr class="govuk-table__row">
-
-  <th class="govuk-table__header" scope="col"></th>
-
-  <th class="govuk-table__header" scope="col"></th>
-  <th class="govuk-table__header" scope="col"></th>
-</tr>
-</thead>
-
-
-
-<tbody class="govuk-table__body">
-<tr class="govuk-table__row">
-
-
-
-<td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-m govuk-!-margin-bottom-1">
+  
+  <th class="govuk-table__cell--numeric"></th>
+  </tr>
+  </thead>
+  
+  
+  
+  <tbody class="govuk-table__body">
+  
+  
+  
+  <tr class="govuk-table__row">
+  
+  <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
   <a href="complete-john" class="govuk-link govuk-link--no-visited-state">
-    Julie Jones
+    Julienne Williams
   </a>
-</h3>
+  </h3>
+  
     </td>
-<td class="govuk-table__cell" scope="row"> </td>
-<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed"></strong></td>
-</tr>
-
-
-
-
-</tbody>
-</table>
+    
+     <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+      Delete<span class="govuk-table__cell--numeric"></span>
+    </a></td></tr>
+  </tr>
+  
+  
+  
+  
+  </tbody>
+  </table><br>
 
 
  
