--- a/app/views/prototypes/peter/answers-provider.html
+++ b/app/views/prototypes/peter/answers-provider.html
@@ -217,7 +217,7 @@
               Filled - Business Administration Level 3
             </dt>
             <dd class="govuk-summary-list__value">
-              Yes - filled temporarily 1
+              Yes - filled temporarily
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
