--- a/app/views/prototypes/teacher/answers-provider.html
+++ b/app/views/prototypes/teacher/answers-provider.html
@@ -43,7 +43,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Managers
+              Leaders + managers
             </dt>
             <dd class="govuk-summary-list__value">
               2
@@ -57,7 +57,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Managers filled
+              Leaders + managers filled
             </dt>
             <dd class="govuk-summary-list__value">
               1
