--- a/app/views/prototypes/teacher/complete-john.html
+++ b/app/views/prototypes/teacher/complete-john.html
@@ -52,8 +52,8 @@
                 </a></h3>
                 <p>
                   Male<br>
-                White<br> 
-            British</p>
+                White 
+            </p>
             </dt>
             
             <dd class="govuk-summary-list__actions">
