--- a/app/views/prototypes/teacher/complete-john-four.html
+++ b/app/views/prototypes/teacher/complete-john-four.html
@@ -54,8 +54,7 @@
               </a></h3>
               <p>
                 Male<br>
-              White<br> 
-          British</p>
+              White</p>
           </dt>
           
           <dd class="govuk-summary-list__actions">
