--- a/app/views/prototypes/teacher/start-staff-end.html
+++ b/app/views/prototypes/teacher/start-staff-end.html
@@ -55,7 +55,7 @@
 <tbody class="govuk-table__body">
   <tr class="govuk-table__row">
     
-    <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="staff-totals">About your organisation</a>
+    <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="many-vacancies">About your organisation</a>
         </td>
     <td class="govuk-table__cell" scope="row"> </td>
     <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Submitted</strong></td>
