--- a/app/views/prototypes/teacher/list-staff-john-end.html
+++ b/app/views/prototypes/teacher/list-staff-john-end.html
@@ -60,7 +60,7 @@
   <tr class="govuk-table__row">
     
     <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
-      <a href="#" class="govuk-link govuk-link--no-visited-state">
+      <a href="complete-julie-five" class="govuk-link govuk-link--no-visited-state">
         Julie Ann Angelo
       </a>
     </h3>
