--- a/app/views/prototypes/teacher/answers-staff-julie.html
+++ b/app/views/prototypes/teacher/answers-staff-julie.html
@@ -99,7 +99,7 @@
               Nationality
             </dt>
             <dd class="govuk-summary-list__value">
-              British
+              EU including Irish
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="">
