--- a/app/views/prototypes/teacher/complete-julie-five.html
+++ b/app/views/prototypes/teacher/complete-julie-five.html
@@ -67,13 +67,12 @@
               <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                 <a href="role" class="govuk-link govuk-link--no-visited-state">
                   Job role</a></h3>
-                 <p>
-                    Teacher<br>
+                 
                   
           </dt>
          
           <dd class="govuk-summary-list__actions">
-            <strong class="govuk-tag govuk-tag--blue" id="eligibility-completed">Completed</strong>
+            <strong class="govuk-tag govuk-tag--blue" id="eligibility-completed">Incomplete</strong>
           </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -81,13 +80,12 @@
             <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
               <a href="what-contract" class="govuk-link govuk-link--no-visited-state">
                 Contract</a></h3>
-                <p>
-                  Permanent<br>
+                
                 
           </dt>
           
           <dd class="govuk-summary-list__actions">
-            <strong class="govuk-tag govuk-tag--blue" id="eligibility-completed">Completed</strong>
+            <strong class="govuk-tag govuk-tag--blue" id="eligibility-completed">Incomplete</strong>
           </dd>
         </div>
       </dl>
