--- a/app/views/prototypes/second/start-staff.html
+++ b/app/views/prototypes/second/start-staff.html
@@ -60,7 +60,7 @@
             <tr class="govuk-table__row">
               
               <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="list-staff-john-end">Your staff</a>
-                <p class="govuk-body">You've started to create a list of staff. <p>Do you want to continue?</p>
+                <p class="govuk-body">Continue to create your staff list.</p>
               </td>
               <td class="govuk-table__cell" scope="row">       </td>
               <td class="govuk-table__cell"></td>
