--- a/app/views/prototypes/second/start-staff.html
+++ b/app/views/prototypes/second/start-staff.html
@@ -51,9 +51,9 @@
             <tr class="govuk-table__row">
               
               <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="many-vacancies">About your organisation</a>
-                <p class="govuk-body">Tell us about recruitment in your organisation and the staff you employ.</p>
-
-                  </td>
+                <td class="govuk-table__cell" scope="row"> </td>
+    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Submitted</strong></td>
+                  
               <td class="govuk-table__cell" scope="row"> </td>
               <td class="govuk-table__cell"></td>
             </tr>
@@ -61,7 +61,7 @@
               
               <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="list-staff-john-end">Your staff</a>
                 <p class="govuk-body">Continue to create your staff list.</p>
-              </td>
+</td>
               <td class="govuk-table__cell" scope="row">       </td>
               <td class="govuk-table__cell"></td>
             </tr>
