--- a/app/views/prototypes/teacher/filled2.html
+++ b/app/views/prototypes/teacher/filled2.html
@@ -39,7 +39,7 @@
               </h1>
             </legend>
             <div id="citizenship-conditional-hint" class="govuk-hint">
-              Add the number of vacancies against the outcome
+              Add the number of vacancies
             </div>
             
             <br><br>
