--- a/app/views/prototypes/teacher/vacancies-levels.html
+++ b/app/views/prototypes/teacher/vacancies-levels.html
@@ -65,18 +65,13 @@
                   </thead>
                   <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
-                      <th scope="row" class="govuk-table__header">Entry level</th>
+                      <th scope="row" class="govuk-table__header">Entry level and level 1</th>
                       <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                       <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                     </tr>
   
-                    <tr class="govuk-table__row">
-                      <th scope="row" class="govuk-table__header">Level 1</th>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                    </tr>
+                    
   
                     <tr class="govuk-table__row">
                       <th scope="row" class="govuk-table__header">Level 2</th>
@@ -93,37 +88,12 @@
                     </tr>
   
                     <tr class="govuk-table__row">
-                      <th scope="row" class="govuk-table__header">Level 4</th>
+                      <th scope="row" class="govuk-table__header">Level 4 and above</th>
                       <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                       <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                     </tr>
-                    <tr class="govuk-table__row">
-                      <th scope="row" class="govuk-table__header">Level 5</th>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                    </tr>
-                    <tr class="govuk-table__row">
-                      <th scope="row" class="govuk-table__header">Level 6</th>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                    </tr>
-  
-                    <tr class="govuk-table__row">
-                      <th scope="row" class="govuk-table__header">Level 7</th>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                    </tr>
-  
-                    <tr class="govuk-table__row">
-                      <th scope="row" class="govuk-table__header">Level 8</th>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                    </tr>
+                   
   
                   
                   </tbody>
@@ -155,18 +125,13 @@
                   </thead>
                   <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
-                      <th scope="row" class="govuk-table__header">Entry level</th>
+                      <th scope="row" class="govuk-table__header">Entry level and level 1</th>
                       <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                       <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                     </tr>
   
-                    <tr class="govuk-table__row">
-                      <th scope="row" class="govuk-table__header">Level 1</th>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                    </tr>
+                    
   
                     <tr class="govuk-table__row">
                       <th scope="row" class="govuk-table__header">Level 2</th>
@@ -183,37 +148,12 @@
                     </tr>
   
                     <tr class="govuk-table__row">
-                      <th scope="row" class="govuk-table__header">Level 4</th>
+                      <th scope="row" class="govuk-table__header">Level 4 and above</th>
                       <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                       <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                     </tr>
-                    <tr class="govuk-table__row">
-                      <th scope="row" class="govuk-table__header">Level 5</th>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                    </tr>
-                    <tr class="govuk-table__row">
-                      <th scope="row" class="govuk-table__header">Level 6</th>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                    </tr>
-  
-                    <tr class="govuk-table__row">
-                      <th scope="row" class="govuk-table__header">Level 7</th>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                    </tr>
-  
-                    <tr class="govuk-table__row">
-                      <th scope="row" class="govuk-table__header">Level 8</th>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                    </tr>
+                    
   
                   
                   </tbody>
