--- a/app/views/prototypes/teacher/explain-how-long.html
+++ b/app/views/prototypes/teacher/explain-how-long.html
@@ -44,7 +44,7 @@
             
             <br><br>
 
-            <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">English - Level 4</h2>
+            <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">English - Level 3</h2>
             <div class="govuk-form-group">
                     <fieldset class="govuk-fieldset">
                       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l"> 
@@ -82,7 +82,7 @@
                   </div>
                      <br><br>
 
-                     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">English - Level 5</h2>
+                     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">English - Level 4 and above</h2>
             <div class="govuk-form-group">
                     <fieldset class="govuk-fieldset">
                       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l"> 
