--- a/app/views/prototypes/teacher/filled2.html
+++ b/app/views/prototypes/teacher/filled2.html
@@ -44,7 +44,7 @@
             
             <br><br>
 
-            <h2 class="govuk-heading-m">English - Level 4</h2>
+            <h2 class="govuk-heading-m">English - Level 3</h2>
             <table class="govuk-table">
                 
               <thead class="govuk-table__head">
@@ -83,7 +83,7 @@
                   
             
                 
-                            <h2 class="govuk-heading-m">English - Level 5</h2>
+                            <h2 class="govuk-heading-m">English - Level 4 and above</h2>
                             <table class="govuk-table">
                               <thead class="govuk-table__head">
                                 <tr class="govuk-table__row">
