--- a/app/views/prototypes/teacher/explain-how-long.html
+++ b/app/views/prototypes/teacher/explain-how-long.html
@@ -35,7 +35,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="citizenship-conditional-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-                How long on average did it take to find teachers for the vacancies for these subject levels?
+                How long did it take to find teachers for the vacancies?
               </h1>
             </legend>
             <!--<div id="citizenship-conditional-hint" class="govuk-hint">
