--- a/app/views/prototypes/teacher/vacancies-subject.html
+++ b/app/views/prototypes/teacher/vacancies-subject.html
@@ -35,7 +35,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="citizenship-conditional-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-                How many teacher vacancies did you have - by subject?
+                How many teaching vacancies did you have - by subject?
               </h1>
             </legend>
             <div id="citizenship-conditional-hint" class="govuk-hint">
