--- a/app/views/prototypes/teacher/add.html
+++ b/app/views/prototypes/teacher/add.html
@@ -110,7 +110,7 @@
 
 <br><br>
 
-<h2 class="govuk-heading-m">Sex</h2>
+<h2 class="govuk-heading-m">Gender</h2>
 
 <fieldset class="govuk-fieldset">
    
