--- a/app/views/prototypes/teacher/teaching-qualification.html
+++ b/app/views/prototypes/teacher/teaching-qualification.html
@@ -54,6 +54,20 @@
           QTLS (Qualified Teacher Learning and Skills status)
         </label>
       </div>
+
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
+        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
+          Advanced teacher status (Society for Education and Training)
+        </label>
+      </div>
+
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
+        <label class="govuk-label govuk-checkboxes__label" for="waste-4">
+          Chartered teacher status (College of Teaching)
+        </label>
+      </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
         <label class="govuk-label govuk-checkboxes__label" for="waste-3">
