--- a/app/views/prototypes/teacher/what-teaching-qualification.html
+++ b/app/views/prototypes/teacher/what-teaching-qualification.html
@@ -73,7 +73,7 @@
           Level 5
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Level 5 in Diploma in Education and Training, Level 5 Diploma in Teaching in the Lifelong Learning Sector (DTLLS) 
+          Level 5 in Diploma in Education and Training, Level 5 Diploma in Teaching in the Lifelong Learning Sector (DTLLS), Level 5 Cert Ed 
         </span>
         
       </div>
@@ -84,7 +84,7 @@
           Level 6
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Bachelors in Education (BEd)  
+          Bachelors in Education (BEd), Level 6 Postgraduate certificate in education (PgCE)  
         </span>
       </div>
 
