--- a/app/views/prototypes/teacher/what-teaching-qualification.html
+++ b/app/views/prototypes/teacher/what-teaching-qualification.html
@@ -84,7 +84,7 @@
           Level 6
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Bachelors in Education (BEd), Level 6 Postgraduate certificate in education (PgCE)  
+          Bachelors in Education (BEd), Level 6 Professional certificate in education (PgCE)  
         </span>
       </div>
 
