--- a/app/views/prototypes/teacher/what-training.html
+++ b/app/views/prototypes/teacher/what-training.html
@@ -52,7 +52,7 @@
           Level 3
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Level 3 Award in Education and Training, Level 3 Award in Preparing to Teach in the Lifelong Learning Sector (PTLLS)
+          Level 3 Award in Education and Training
         </span>
       </div>
 
@@ -62,7 +62,7 @@
           Level 4
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Level 4 in Education and Training, Level 4 Certificate in Teaching in the Lifelong Learning Sector
+          Level 4 in Education and Training
         </span>
         
       </div>
@@ -73,7 +73,7 @@
           Level 5
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Level 5 in Diploma in Education and Training, Level 5 Diploma in Teaching in the Lifelong Learning Sector (DTLLS) or apprenticeship
+          Level 5 in Diploma in Education and Training, Level 5 Cert Ed or apprenticeship
         </span>
         
       </div>
@@ -84,7 +84,7 @@
           Level 6
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Bachelors in Education (BEd)  
+          Bachelors in Education (BEd), Level 6 Professional certificate in education (PgCE) 
         </span>
       </div>
 
