--- a/app/views/prototypes/teacher/how-long-role.html
+++ b/app/views/prototypes/teacher/how-long-role.html
@@ -37,7 +37,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How long have they worked in their current role?
+        How long have they worked in their current position?
       </h1>
     </legend><br>
     
