--- a/app/views/prototypes/teacher/what-contract.html
+++ b/app/views/prototypes/teacher/what-contract.html
@@ -42,7 +42,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How many contracts do they have?
+        How many contracts do they have with you?
       </h1>
     </legend><br>
     
