--- a/app/views/prototypes/teacher/start-staff.html
+++ b/app/views/prototypes/teacher/start-staff.html
@@ -50,7 +50,7 @@
           <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
               
-              <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="many-vacancies">About your organisation</a>
+              <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="many-vacancies">Your organisation</a>
                 <p class="govuk-body">Tell us about recruitment in your organisation and the staff you employ.</p>
 
                   </td>
