--- a/app/views/prototypes/teacher/start-staff.html
+++ b/app/views/prototypes/teacher/start-staff.html
@@ -31,7 +31,7 @@
   
         <h1 class="govuk-heading-xl">Tell us about your further education staff
           <b>
-        <span class="govuk-caption-xl">August 2020 to July 2021</span></h1>
+        <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
 
         
         
@@ -51,7 +51,7 @@
             <tr class="govuk-table__row">
               
               <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="many-vacancies">Your organisation</a>
-                <p class="govuk-body">Tell us about recruitment in your organisation and the staff you employ.</p>
+                <p class="govuk-body">Tell us about recruitment and the staff you employ.</p>
 
                   </td>
               <td class="govuk-table__cell" scope="row"> </td>
@@ -60,7 +60,7 @@
             <tr class="govuk-table__row">
               
               <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="mis">Your staff</a>
-                <p class="govuk-body">Create a list of full-time, part-time and temporary staff. <p>Include senior leaders, managers, teachers, teaching support and administration staff.</p>
+                <p class="govuk-body">Your full-time, part-time and temporary staff. <p>Include senior leaders, managers, teachers, teaching support and administration staff.</p>
               </td>
               <td class="govuk-table__cell" scope="row">       </td>
               <td class="govuk-table__cell"></td>
