--- a/app/views/prototypes/teacher/vacancies-subject.html
+++ b/app/views/prototypes/teacher/vacancies-subject.html
@@ -39,7 +39,7 @@
               </h1>
             </legend>
             <div id="citizenship-conditional-hint" class="govuk-hint">
-            Add the number of teacher or training vacancies you had - next to their subjects in the list
+            Add the teacher vacancies you had - next to their subjects in the list
             </div>
             
             <br><br>
