--- a/app/views/prototypes/second/start-staff-end.html
+++ b/app/views/prototypes/second/start-staff-end.html
@@ -32,7 +32,7 @@
 
   
         <h1 class="govuk-heading-xl">FE staff collection<br>
-        <span class="govuk-caption-xl">August 2020 to July 2021</span></h1>
+        <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
 
         <p class="govuk-body">You have submitted two parts of your staff collection.</p>
 
@@ -55,14 +55,14 @@
 <tbody class="govuk-table__body">
   <tr class="govuk-table__row">
     
-    <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="many-vacancies">About your organisation</a>
+    <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="answers-provider">Your organisation</a>
         </td>
     <td class="govuk-table__cell" scope="row"> </td>
     <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Submitted</strong></td>
   </tr>
   <tr class="govuk-table__row">
     
-    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="mis">Your staff</a></td>
+    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="list-staff-john-end">Your staff</a></td>
     <td class="govuk-table__cell" scope="row">       </td>
     <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Submitted</strong></td>
   </tr>
