--- a/app/views/prototypes/second/start-staff.html
+++ b/app/views/prototypes/second/start-staff.html
@@ -31,7 +31,7 @@
   
         <h1 class="govuk-heading-xl">Tell us about your further education staff
           <b>
-        <span class="govuk-caption-xl">August 2020 to July 2021</span></h1>
+        <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
 
         
         
@@ -50,7 +50,7 @@
           <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
               
-              <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="many-vacancies">About your organisation</a>
+              <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="many-vacancies">Your organisation</a>
                 <td class="govuk-table__cell" scope="row"> </td>
     <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Submitted</strong></td>
                   
