--- a/app/views/prototypes/second/start-staff.html
+++ b/app/views/prototypes/second/start-staff.html
@@ -50,7 +50,7 @@
           <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
               
-              <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="many-vacancies">Your organisation</a>
+              <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="answers-provider">Your organisation</a>
                 <td class="govuk-table__cell" scope="row"> </td>
     <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Submitted</strong></td>
                   
