--- a/app/views/index.html
+++ b/app/views/index.html
@@ -167,19 +167,17 @@
       <p>Validating our changes - <a href="/prototypes/beta/details">Start</a>
       </p>
 
-      <br><br>
-
-      <p>Adding teacher John Adams - <a href="/prototypes/teacher/details">Full set of questions in a form</a>
-      </p>
-
-      <br><br>
+      
 
       <p>Second visit - <a href="/prototypes/second/details">For Cathy</a>
       </p>
 
+      
+
+      <p>Raph user test 1 - <a href="/prototypes/teacher/details">Full set of questions in a form</a>
+      </p>
+
       <br><br>
-
-
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
 
