--- a/app/views/prototypes/teacher/what-teaching-qualification.html
+++ b/app/views/prototypes/teacher/what-teaching-qualification.html
@@ -148,7 +148,7 @@
 
 
 
-          <a href="what-training" class="govuk-button show-continue" style="display: inline;">
+          <a href="complete-john-four" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
