--- a/app/views/prototypes/teacher/date-stop.html
+++ b/app/views/prototypes/teacher/date-stop.html
@@ -105,7 +105,7 @@
 <br>
 
 
-          <a href="retire" class="govuk-button show-continue" style="display: inline;">
+          <a href="complete-john-five" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
