--- a/app/views/prototypes/teacher/list-staff-john-end.html
+++ b/app/views/prototypes/teacher/list-staff-john-end.html
@@ -119,7 +119,7 @@
         </a>
       </h3>
       <p>Male<br>
-        White</p>
+        Black / African / Caribbean / Black British</p>
           </td>
          
            <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
