--- a/app/views/prototypes/teacher/other.html
+++ b/app/views/prototypes/teacher/other.html
@@ -77,11 +77,20 @@
           ESOL
         </label>
       </div>
+
       <div class="govuk-radios">
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Community Learning
+            Community Learning
+        </label>
+      </div>
+
+      <div class="govuk-radios">
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+          <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+          Family Learning
         </label>
       </div>
       
