--- a/app/views/prototypes/teacher/start-intro2.html
+++ b/app/views/prototypes/teacher/start-intro2.html
@@ -27,13 +27,11 @@
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">Tell us about your further education staff</h1>
-        
+        <h1 class="govuk-heading-xl">Tell us about your further education staff
+          <br><br>
+            <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
 
-        
-       
-
-        <p class="govuk-body">This will help further education providers by:</p>
+            <p class="govuk-body">This will help further education providers by:</p>
 
         <ul class="govuk-list govuk-list--bullet">
           <li>allowing them to benchmark against other providers </li>
