--- a/app/views/index.html
+++ b/app/views/index.html
@@ -174,7 +174,7 @@
 
       
 
-      <p>Raph user test 1 - <a href="/prototypes/teacher/details">Full set of questions in a form</a>
+      <p>Raph user test 1 - <a href="/prototypes/teacher/details">Teacher questions in a form</a>
       </p>
 
       <br><br>
