--- a/app/views/prototypes/teacher/apprentices.html
+++ b/app/views/prototypes/teacher/apprentices.html
@@ -31,7 +31,9 @@
 
             
 <p>
-  Tell us the number of apprentices you employed in 2020/21 - not the ones you trained for other organisations.
+  Tell us how many apprentices you employed in your own organisation - not the ones you trained for other organisations.
+
+
 </p>
 
 
