--- a/app/views/prototypes/teacher/start-staff.html
+++ b/app/views/prototypes/teacher/start-staff.html
@@ -51,7 +51,7 @@
             <tr class="govuk-table__row">
               
               <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="many-vacancies">Your organisation</a>
-                <p class="govuk-body">Tell us about recruitment and the staff you employ.</p>
+                <p class="govuk-body">Tell us about your staff vacancies and the apprentices you employed.</p>
 
                   </td>
               <td class="govuk-table__cell" scope="row"> </td>
