--- a/app/views/prototypes/teacher/vacancies-subject.html
+++ b/app/views/prototypes/teacher/vacancies-subject.html
@@ -538,6 +538,13 @@
                         <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                           <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                       </tr>
+
+                      <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">Family Learning</th>
+                        <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                        <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                          <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                      </tr>
                       
     
                       
