--- a/app/views/prototypes/teacher/leader.html
+++ b/app/views/prototypes/teacher/leader.html
@@ -57,7 +57,7 @@
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="radio-leader1" name="teach" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="choose">
-          Yes - head of my organisation or FE provision
+          Yes - head of my organisation or FE service
           </label>
           <!--<div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
             Head of your organisation or your FE provision
