--- a/app/views/prototypes/teacher/role.html
+++ b/app/views/prototypes/teacher/role.html
@@ -51,7 +51,19 @@
               Senior leader
             </label>
             <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
-              Principal, vice-principal, working director, CEO or head of service
+              Principal, vice-principal, director, CEO, head of FE service or training
+
+
+
+
+
+
+
+
+
+
+
+
             </div>
 
           </div><br>
