--- a/app/views/prototypes/no-vacancies/vacancies-subject.html
+++ b/app/views/prototypes/no-vacancies/vacancies-subject.html
@@ -35,7 +35,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="citizenship-conditional-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-                How many teaching vacancies did you have - by subject?
+                How many teaching vacancies did you have?
               </h1>
             </legend>
             <div id="citizenship-conditional-hint" class="govuk-hint">
@@ -558,6 +558,24 @@
               </div>
               
             </div>
+
+            <br>
+<div class="govuk-form-group">
+  <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+   
+    <div class="govuk-checkboxes">
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
+        <label class="govuk-label govuk-checkboxes__label" for="waste">
+          We didn't have any vacancies
+        </label>
+      </div>
+      
+      
+    </div>
+
+  </fieldset>
+</div><br>
 
           
             </div>
