--- a/app/views/prototypes/no-vacancies/vacancies-subject.html
+++ b/app/views/prototypes/no-vacancies/vacancies-subject.html
@@ -567,7 +567,7 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          We didn't have any vacancies
+          We didn't have any teacher vacancies this year
         </label>
       </div>
       
